--- a/Linear_Regression.ipynb
+++ b/Linear_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "78963fcc",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c860f9f3",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ffd5061a",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,40 +67,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "78cf41a3",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(['Description'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c31b7e53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Index', 'Title', 'Amount(in rupees)', 'Price (in rupees)', 'location',\n",
+       "       'Carpet Area', 'Status', 'Floor', 'Transaction', 'Furnishing', 'facing',\n",
+       "       'overlooking', 'Society', 'Bathroom', 'Balcony', 'Car Parking',\n",
+       "       'Ownership', 'Super Area', 'Dimensions', 'Plot Area'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "65db97d3",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0         Bhiwandi, Thane has an attractive 1 BHK Flat f...\n",
-      "1         One can find this stunning 2 BHK flat for sale...\n",
-      "2         Up for immediate sale is a 2 BHK apartment in ...\n",
-      "3         This beautiful 1 BHK Flat is available for sal...\n",
-      "4         This lovely 2 BHK Flat in Pokhran Road, Thane ...\n",
+      "0         1 BHK Ready to Occupy Flat for sale in Srushti...\n",
+      "1         2 BHK Ready to Occupy Flat for sale in Dosti V...\n",
+      "2         2 BHK Ready to Occupy Flat for sale in Sunrise...\n",
+      "3               1 BHK Ready to Occupy Flat for sale Kasheli\n",
+      "4         2 BHK Ready to Occupy Flat for sale in TenX Ha...\n",
       "                                ...                        \n",
-      "187526    This magnificent 3 BHK Flat is available for s...\n",
-      "187527    Have a look at this immaculate 3 BHK flat for ...\n",
-      "187528    Gazipur, Zirakpur has an appealing 3 BHK flat ...\n",
-      "187529    Up for immediate sale is a 2 BHK apartment in ...\n",
-      "187530    This exquisite 3 BHK Flat is offered for sale ...\n",
-      "Name: Description, Length: 187531, dtype: object\n"
+      "187526    3 BHK Ready to Occupy Flat for sale in Bollywo...\n",
+      "187527    3 BHK Ready to Occupy Flat for sale in Sushma ...\n",
+      "187528    3 BHK Ready to Occupy Flat for sale in Bollywo...\n",
+      "187529    2 BHK Ready to Occupy Flat for sale in Friends...\n",
+      "187530    3 BHK Ready to Occupy Flat for sale in Affinit...\n",
+      "Name: Title, Length: 187531, dtype: object\n"
      ]
     }
    ],
    "source": [
-    "print(df.Description)"
+    "print(df.Title)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c31b7e53",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
