--- a/Linear_Regression.ipynb
+++ b/Linear_Regression.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('house_prices.csv')\n"
+    "df = pd.read_csv('house_prices_optimized.csv')\n"
    ]
   },
   {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "65db97d3",
    "metadata": {
     "scrolled": true
@@ -130,6 +130,136 @@
    "source": [
     "print(df.Title)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1d5134f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(['Title'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bd80c7da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Index', 'Amount(in rupees)', 'Price (in rupees)', 'location',\n",
+       "       'Carpet Area', 'Status', 'Floor', 'Transaction', 'Furnishing', 'facing',\n",
+       "       'overlooking', 'Society', 'Bathroom', 'Balcony', 'Car Parking',\n",
+       "       'Ownership', 'Super Area', 'Dimensions', 'Plot Area'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9066d01e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('house_prices_optimized.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "557aecb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 8430a3d] modified dataset\n",
+      " 3 files changed, 187586 insertions(+), 187557 deletions(-)\n",
+      " delete mode 100644 house_prices.csv\n",
+      " create mode 100644 house_prices_optimized.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"modified dataset\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1d2d6ac4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enumerating objects: 10, done.\n",
+      "Counting objects: 100% (10/10), done.\n",
+      "Delta compression using up to 16 threads\n",
+      "Compressing objects: 100% (10/10), done.\n",
+      "Writing objects: 100% (10/10), 7.55 MiB | 2.35 MiB/s, done.\n",
+      "Total 10 (delta 2), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (2/2), done.\u001b[K\n",
+      "remote: \u001b[1;31merror\u001b[m: Trace: fcf90aeaa1f5ee97f65be66a209fc13970037439240d5981de41c1ba4d2b2ec8\u001b[K\n",
+      "remote: \u001b[1;31merror\u001b[m: See https://gh.io/lfs for more information.\u001b[K\n",
+      "remote: \u001b[1;31merror\u001b[m: File house_prices.csv is 101.23 MB; this exceeds GitHub's file size limit of 100.00 MB\u001b[K\n",
+      "remote: \u001b[1;31merror\u001b[m: GH001: Large files detected. You may want to try Git Large File Storage - https://git-lfs.github.com.\u001b[K\n",
+      "To https://github.com/xiayulin123/HouseValue_Prediction_newDataset.git\n",
+      " \u001b[31m! [remote rejected]\u001b[m master -> master (pre-receive hook declined)\n",
+      "\u001b[31merror: failed to push some refs to 'https://github.com/xiayulin123/HouseValue_Prediction_newDataset.git'\n",
+      "\u001b[m"
+     ]
+    }
+   ],
+   "source": [
+    "!git push -u origin master"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "28c41ee5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\r\n",
+      "Changes not staged for commit:\r\n",
+      "  (use \"git add <file>...\" to update what will be committed)\r\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\r\n",
+      "\t\u001b[31mmodified:   Linear_Regression.ipynb\u001b[m\r\n",
+      "\r\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2c2c4f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
